fix: alignment, margins and sizes

--- a/frontend/src/assets/styles/admin.css
+++ b/frontend/src/assets/styles/admin.css
@@ -4,6 +4,7 @@
 
 .roboto-slab {
     font-family: Roboto Slab;
+    margin: 0px;
 }
 
 /* background colors for the buttons */
@@ -42,6 +43,7 @@
 .sort-radio {
     min-width: 20px;
     width: 20px;
+    margin: 0px;
     margin-right: 5px;
 }
 
@@ -53,21 +55,25 @@
     margin-top: 40px;
     justify-content: space-between;
     margin-left: 63px;
+    margin-bottom: 20px;
 }
 
 .student-sort {
     margin-top: 16px;
-    margin-right: 90px;
+    margin-right: 85px;
 }
 
+.student-sort>div>p{
+    margin: 0px;
+    margin-right: 20px;
+}
 .approver-sort {
     margin-left: auto;
     margin-right: 66px;
 }
 
 .sort-form {
-    margin-top: 20px;
-    margin-left: 20px;
+    display: flex;
 }
 
 .first-col-label {
@@ -201,7 +207,7 @@
 
 .search-button {
     height: 38.5px;
-    width: 85px;
+    width: 60px;
     background-color: #094C9F;
     color: white;
     border: none;
@@ -209,4 +215,30 @@
 
 .search-bar {
     margin-left: 65px;
+}
+
+.approver-type-label {
+    font-size: 15px;
+}
+
+.approver-type-dropdown {
+    margin-top: 6px;
+    border-radius: 10px;
+    height: 38px;
+    width: 470px;
+    min-width: 50px;
+}
+
+.approver-sort>div>p{
+    margin: 0px;
+    margin-right: 20px;
+}
+
+.row.approver-sort{
+    display: flex;
+    padding: 10px;
+}
+
+.fa.fa-search{
+    margin: 0px;
 }
